# mirim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/mr/: core.h  error.h  exports.h  file.h  macro.h  scanner.h
include/mr/core/: ast.h  error.h  file.h  macro.h  parser.h  scanner.h  token.h
rsc/: test.mr
src/core/: compiler.c  error.c  file.c  parser.c  scanner.c  token.c
